Fix build for J17?